# language-model

./: .gitignore  README.md  minimal-example.py  pyproject.toml  sample.py  toy_experiment.py
architecture_research/sweeps/: sweep_pretrain_lr_warmup.py
config/: deepseek.py  medium_pretrain.json  model_config.json  pretrain.json  sft.json  tiny_model.json  training_args.py
config/early_stopping/: stop.yaml
config/model/: medium.yaml  tiny.yaml
config/sft/: base_sft.yaml
config/train/: base_pretrain.yaml  tiny.yaml
data/: README.md  data_collator.py  data_loader.py
experiments/: README.md  config_generator.py
experiments/analysis/: fetch_wandb_runs.py  sweep_analysis.py
experiments/rerun/: rerun_best_hyperparams.py  upload_rerun_configs.py
experiments/sweeps/: sweep_model_size.py  sweep_pretrain_lr_warmup.py  sweep_resample_focused.py
model/: README.md  deepseek.py  kv_cache.py  lora.py  mhsa.py  rope.py
model/moe/: README.md  auxiliary_loss.py  distributor.py  feedforward.py  moe.py
sweeps/: sweep_pretrain_lr_warmup.py
tests/: conftest.py  test_rope.py
tests/data/: test_pad.py
tests/fixtures/configs/: model_config.json  pretrain.json  sft.json  sft.yaml  tiny.yaml  (+2 more)
tests/integration/: test_checkpointing.py  test_train_learns_a_sequence.py  test_train_loop.py  test_train_loss_decreases.py  test_train_step.py  test_train_tiny_dataset.py
tests/moe/: test_auxiliary_loss.py  test_distributor.py  test_moe.py
tests/unit/: test_deepseek.py  test_kv_cache.py  test_lora.py  test_mhsa.py
train/: README.md  pretrain.py  sft.py  shared.py
(+6 files in other folders)
