[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "einops>=0.8.1",
    "jax>=0.6.0",
    "pytest>=8.3.5",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[tool.setuptools]
packages = ["config", "model"]
